# PINNs

./: .gitignore  README.md  bezier.ipynb  connectivity_wheel.pkl  elastostatics_2d.ipynb  elastostatics_2d_fem.py  elastostatics_3d.geo  elastostatics_3d.ipynb  elastostatics_3d.py  elastostatics_3d_fem.py  elastostatics_3d_param.ipynb  elastostatics_3d_test.py  elatostatics_3d.geo  geometries3d.ipynb  geometries3d.py  helmholz_basic.ipynb  holder.ipynb  holder_ccx.ipynb  holder_contacts.ipynb  holder_contacts_param.ipynb  holder_contacts_param_2.ipynb  holder_contacts_param_3.ipynb  holder_flat.geom  holder_round_0.geom  holder_round_1.geom  holder_round_2.geom  holder_spoke.geom  hyperelasticity_3d.py  hyperelasticity_3d_contacts.py  iga_ritz.py  iga_ritz2.py  iga_ritz4.py  iga_ritz_convergence1.py  magnetostatic_ring_2d.py  magnetostatic_ring_2d_ritz.py  magnetostatic_ring_3d.ipynb  magnetostatic_ring_3d.py  pinn_square.ipynb  pinn_square.py  pyproject.toml  (+41 more)
docs/pinns/: bspline.html  geometry.html  index.html  operators.html  pinns.html
examples/: README.rst
examples/basics/: bezier.ipynb
examples/old/: elastostatics_2d.ipynb  elastostatics_3d.geo  elastostatics_3d.ipynb  (+18 more)
pinns/: __init__.py  bspline.py  geometry.py  operators.py  pinns.py
quad/: pinn_Quad3.py  quad.geo  quad.msh  quad1.py  quad1.xml  quad_2d_fenics.ipynb  quad_facet_region.xml  quad_physical_region.xml  tmp.geo  tmp_physical_region.xml
results/: comparison_paraview.pvsm
slice/: tmp.geo  tmp.msh  tmp_facet_region.xml  tmp_physical_region.xml
tests/: test.py  test_operators.py
(+25 files in other folders)
